# panda_controller

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.txt  doxygen.cfg  package.xml
data/: poses.json  poses.yaml  scenes.json  scenes.yaml
data/meshes/: bracket_down.stl  bracket_up.stl  container1.stl  container2.stl  cube_bracket.stl  object_female.stl  object_male.stl  toy1.stl  toy2.stl
database/: poses.json  scenes.json
db/: poses.json  scenes.json
examples/: console.cpp  pick_place.cpp  teleop_listener.cpp  teleop_talker.cpp  test_panda.cpp
include/: arm.hpp  colors.hpp  data_manager.hpp  exceptions.hpp  my_exceptions.hpp  panda.hpp  poses_manager.hpp
include/panda_controller/: data_manager.hpp  exceptions.hpp  panda.hpp  panda_arm.hpp  panda_gripper.hpp  panda_scene.hpp
include/utils/: colors.hpp
launch/: absolute_move.launch  console.launch  console_python.launch  controller.launch  current_pose.launch  demo.launch  gripper_move.launch  obj_pose.launch  pick_and_place.launch  pick_place.launch  python_console.launch  relative_move.launch  simulation.launch  teleop_listener.launch  teleop_talker.launch  test.launch
msg/: teleop_panda.msg
scripts/: console.py
scripts/src/: colors.py  data_manager.py  panda_arm.py  panda_arm_moveit.py  panda_gripper.py  panda_gripper_action.py  panda_gripper_moveit.py  panda_interface.py  panda_interface_moveit.py  utils.py
src/: absolute_move.cpp  colors.cpp  console.cpp  current_pose.cpp  data_manager.cpp  demo.cpp  gripper_move.cpp  obj_pose.cpp  panda.cpp  panda_test.cpp  pick_and_place.cpp  pick_place.cpp  relative_move.cpp  teleop_listener.cpp  teleop_talker.cpp  template.cpp
src/my_libs/: arm.cpp  data_manager.cpp  panda.cpp  poses_manager.cpp
src/panda_controller/: colors.cpp  data_manager.cpp  panda.cpp  panda_arm.cpp  panda_gripper.cpp  panda_scene.cpp
src/utils/: colors.cpp
