<?xml version="1.0"?>
<package format="2">
    <name>panda_controller</name>
    <version>0.0.0</version>
    <description>The panda_controller package</description>
    <maintainer email="envq@todo.todo">envq</maintainer>
    <license>GPLv3</license>


    <buildtool_depend>catkin</buildtool_depend>
  
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning_interface</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
      <!-- Other tools can request additional information be placed here -->
    </export>
</package>
